--- a/_includes/dc/schedule.html
+++ b/_includes/dc/schedule.html
@@ -1,4 +1,4 @@
-{% comment %}
+<!-- {% comment %}
 This is the typical schedule for the Data Carpentry workshops.
 The schedule for the different curricula are listed here:
 - dc-astronomy
@@ -86,7 +86,7 @@ The schedule for the different curricula are listed here:
   </div>
 </div>
 
-{% elsif site.curriculum == "dc-genomics" %}
+{% elsif site.curriculum == "dc-genomics" %}  -->
 
 <div class="row">
   <div class="col-md-6">
@@ -119,7 +119,7 @@ The schedule for the different curricula are listed here:
   </div>
 </div>
 
-{% elsif site.curriculum == "dc-socsci" %}
+<!-- {% elsif site.curriculum == "dc-socsci" %}
 
 <div class="row">
   <div class="col-md-6">
@@ -206,4 +206,4 @@ The schedule for the different curricula are listed here:
 
 {% else %}
 {% include warning-curriculum.html %}
-{% endif %}
+{% endif %} -->
