--- a/_includes/dc/schedule.html
+++ b/_includes/dc/schedule.html
@@ -96,8 +96,10 @@ The schedule for the different curricula are listed here:
 	<td>Before starting</td>
 	<td><a href="{{ site.pre_survey }}{{ site.github.project_title }}" target="_blank">Pre-workshop survey</a></td>
       </tr>
-      <tr><td>Morning</td> <td> <a href="https://datacarpentry.org/organization-genomics/">Project Organization and Management</a></td></tr>
-      <tr><td> </td><td><a href="https://datacarpentry.org/shell-genomics/">Introduction to the Command Line</a></td></tr>
+      <tr><td>Morning (8:00-9:30)</td> <td> <a href="https://datacarpentry.org/organization-genomics/">Project Organization and Management</a></td></tr>
+      <tr><td>Morning break (9:30)</td> <td> </td></tr>
+      <tr><td>Morning (9:45-12:00)</td> <td> <a href="https://datacarpentry.org/shell-genomics/">Introduction to the Command Line</a></td></tr>
+      <tr><td>Lunch break (12:00-13:00)</td> <td> </td></tr>
       <tr><td>Afternoon</td><td><a href="https://datacarpentry.org/wrangling-genomics/">Data Wrangling and Processing</a></td></tr>
 			<tr> <td>Evening</td> <td>END</td> </tr>
     </table>
