--- a/_includes/dc/schedule.html
+++ b/_includes/dc/schedule.html
@@ -96,19 +96,26 @@ The schedule for the different curricula are listed here:
 	<td>Before starting</td>
 	<td><a href="{{ site.pre_survey }}{{ site.github.project_title }}" target="_blank">Pre-workshop survey</a></td>
       </tr>
-      <tr><td>Morning (8:00-9:30)</td> <td> <a href="https://datacarpentry.org/organization-genomics/">Project Organization and Management</a></td></tr>
-      <tr><td>Morning break (9:30)</td> <td> </td></tr>
-      <tr><td>Morning (9:45-12:00)</td> <td> <a href="https://datacarpentry.org/shell-genomics/">Introduction to the Command Line</a></td></tr>
-      <tr><td>Lunch break (12:00-13:00)</td> <td> </td></tr>
-      <tr><td>Afternoon</td><td><a href="https://datacarpentry.org/wrangling-genomics/">Data Wrangling and Processing</a></td></tr>
-			<tr> <td>Evening</td> <td>END</td> </tr>
+      <tr><td>8:00-9:30</td> <td> <a href="https://datacarpentry.org/organization-genomics/">Project Organization and Management</a></td> </tr>
+      <tr><td>9:30-9:45</td> <td>Morning break</td> </tr>
+      <tr><td>9:45-12:00</td> <td> <a href="https://datacarpentry.org/shell-genomics/">Introduction to the Command Line</a></td> </tr>
+      <tr><td>12:00-13:00</td> <td>Lunch break</td> </tr>
+      <tr><td>13:00-14:25</td> <td> <a href="https://datacarpentry.org/shell-genomics/">Continuation: Introduction to the Command Line</a></td></tr>
+      <tr><td>14:25-14:40</td> <td>Afternoon break</td> </tr>
+      <tr><td>14:40-15:55)</td><td><a href="https://datacarpentry.org/wrangling-genomics/">Data Wrangling and Processing</a></td></tr>
+      <tr><td>16:00</td> <td>END</td> </tr>
     </table>
   </div>
   <div class="col-md-6">
     <h3>Day 2</h3>
     <table class="table table-striped">
-			<tr><td>Morning</td><td><a href="https://datacarpentry.org/wrangling-genomics/">Continuation: Data Wrangling and Processing</a></td></tr>
-			<tr><td>Afternoon</td><td><a href="https://datacarpentry.org/cloud-genomics/">Introduction to Cloud Computing for Genomics</a></td></tr>
+			<tr><td>8:00-9:05</td> <td><a href="https://datacarpentry.org/wrangling-genomics/">Continuation: Data Wrangling and Processing</a></td> </tr>
+  		        <tr><td>9:05-9:20</td> <td>Morning break</td> </tr>
+	    		<tr><td>9:20-12:00</td> <td><a href="https://datacarpentry.org/wrangling-genomics/">Continuation: Data Wrangling and Processing</a></td> </tr>
+ 		        <tr><td>12:00-13:00</td> <td>Lunch break</td> </tr>
+			<tr><td>13:00-14:00</td> <td><a href="https://datacarpentry.org/cloud-genomics/">Introduction to Cloud Computing for Genomics</a></td></tr>
+	     		<tr><td>14:00-14:10</td> <td>Wrap-up</td> </tr>
+	                <tr><td>14:15</td> <td>END</td> </tr>
       <tr>
 	<td>Evening</td>
 	<td><a href="{{ site.post_survey }}{{ site.github.project_title }}" target="_blank">Post-workshop survey</a></td>
