--- a/_includes/dc/schedule.html
+++ b/_includes/dc/schedule.html
@@ -113,15 +113,15 @@ The schedule for the different curricula are listed here:
   		        <tr><td>9:05-9:20</td> <td>Morning break</td> </tr>
 	    		<tr><td>9:20-12:00</td> <td><a href="https://datacarpentry.org/wrangling-genomics/">Continuation: Data Wrangling and Processing</a></td> </tr>
  		        <tr><td>12:00-13:00</td> <td>Lunch break</td> </tr>
-			<tr><td>13:00-14:00</td> <td><a href="https://datacarpentry.org/cloud-genomics/">Introduction to Cloud Computing for Genomics</a></td></tr>
-	     		<tr><td>14:00-14:10</td> <td>Wrap-up</td> </tr>
-	                <tr><td>14:15</td> <td>END</td> </tr>
+			<tr><td>13:00-14:00</td> <td><a href="https://datacarpentry.org/cloud-genomics/">Introduction to Cloud Computing for Genomics</a></td> </tr>
       <tr>
-	<td>Evening</td>
+	<td>14:00-14:10</td>
 	<td><a href="{{ site.post_survey }}{{ site.github.project_title }}" target="_blank">Post-workshop survey</a></td>
       </tr>
       <tr>
-	<td> </td>
+	<td>14:10-14:20</td> <td>Wrap-up</td>
+      </tr>
+      <tr>
 	<td> END </td>
       </tr>
     </table>
