--- a/_includes/dc/schedule.html
+++ b/_includes/dc/schedule.html
@@ -102,7 +102,7 @@ The schedule for the different curricula are listed here:
       <tr><td>12:00-13:00</td> <td>Lunch break</td> </tr>
       <tr><td>13:00-14:25</td> <td> <a href="https://datacarpentry.org/shell-genomics/">Continuation: Introduction to the Command Line</a></td></tr>
       <tr><td>14:25-14:40</td> <td>Afternoon break</td> </tr>
-      <tr><td>14:40-15:55)</td><td><a href="https://datacarpentry.org/wrangling-genomics/">Data Wrangling and Processing</a></td></tr>
+      <tr><td>14:40-15:55</td><td><a href="https://datacarpentry.org/wrangling-genomics/">Data Wrangling and Processing</a></td></tr>
       <tr><td>16:00</td> <td>END</td> </tr>
     </table>
   </div>
@@ -119,10 +119,10 @@ The schedule for the different curricula are listed here:
 	<td><a href="{{ site.post_survey }}{{ site.github.project_title }}" target="_blank">Post-workshop survey</a></td>
       </tr>
       <tr>
-	<td>14:10-14:20</td> <td>Wrap-up</td>
+	<td>14:10-14:25</td> <td>Wrap-up</td>
       </tr>
       <tr>
-	<td> END </td>
+	<td>14:30</td> <td>END</td> </tr>
       </tr>
     </table>
   </div>
