--- a/_includes/dc/schedule.html
+++ b/_includes/dc/schedule.html
@@ -106,14 +106,14 @@ The schedule for the different curricula are listed here:
   <div class="col-md-6">
     <h3>Day 2</h3>
     <table class="table table-striped">
-	    <tr><td>8:00-9:05</td> <td><a href="https://datacarpentry.org/wrangling-genomics/">Continuation: Data Wrangling and Processing</a></td> </tr>
-	    <tr><td>9:05-9:20</td> <td>Morning break</td> </tr>
-	    <tr><td>9:20-12:00</td> <td><a href="https://datacarpentry.org/wrangling-genomics/">Continuation: Data Wrangling and Processing</a></td> </tr>
+	    <tr><td>8:00-9:05</td>   <td><a href="https://datacarpentry.org/wrangling-genomics/">Continuation: Data Wrangling and Processing</a></td> </tr>
+	    <tr><td>9:05-9:20</td>   <td>Morning break</td> </tr>
+	    <tr><td>9:20-12:00</td>  <td><a href="https://datacarpentry.org/wrangling-genomics/">Continuation: Data Wrangling and Processing</a></td> </tr>
 	    <tr><td>12:00-13:00</td> <td>Lunch break</td> </tr>
 	    <tr><td>13:00-14:00</td> <td><a href="https://datacarpentry.org/cloud-genomics/">Introduction to Cloud Computing for Genomics</a></td> </tr>
-	    <td>14:00-14:10</td> <td><a href="{{ site.post_survey }}{{ site.github.project_title }}" target="_blank">Post-workshop survey</a></td> </tr>
+	    <tr><td>14:00-14:10</td> <td><a href="{{ site.post_survey }}{{ site.github.project_title }}" target="_blank">Post-workshop survey</a></td> </tr>
 	    <tr><td>14:10-14:25</td> <td>Wrap-up</td> </tr>
-	    <tr><td>14:30</td> <td>END</td> </tr>
+	    <tr><td>14:30</td>       <td>END</td> </tr>
     </table>
   </div>
 </div>
